// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FavoriteButton Component matches the snapshot when isFavorite is false 1`] = `
<button
  className="rounded-md mt-4 shadow-sm border border-gray-100 text-xs bg-red-800 hover:bg-sky-900 font-normal px-3 py-2 text-white"
  onClick={
    [MockFunction] {
      "calls": [
        [
          SyntheticBaseEvent {
            "_reactName": "onClick",
            "_targetInst": null,
            "altKey": false,
            "bubbles": true,
            "button": 0,
            "buttons": 0,
            "cancelable": true,
            "clientX": 0,
            "clientY": 0,
            "ctrlKey": false,
            "currentTarget": null,
            "defaultPrevented": false,
            "detail": 0,
            "eventPhase": 3,
            "getModifierState": [Function],
            "isDefaultPrevented": [Function],
            "isPropagationStopped": [Function],
            "isTrusted": false,
            "metaKey": false,
            "movementX": 0,
            "movementY": 0,
            "nativeEvent": MouseEvent {
              "isTrusted": false,
            },
            "pageX": undefined,
            "pageY": undefined,
            "relatedTarget": null,
            "screenX": 0,
            "screenY": 0,
            "shiftKey": false,
            "target": <button
              class="rounded-md mt-4 shadow-sm border border-gray-100 text-xs bg-red-800 hover:bg-sky-900 font-normal px-3 py-2 text-white"
            >
              Follow
            </button>,
            "timeStamp": 1728807790828,
            "type": "click",
            "view": null,
          },
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  Follow
</button>
`;

exports[`FavoriteButton Component matches the snapshot when isFavorite is true 1`] = `
<button
  className="rounded-md mt-4 shadow-sm border border-gray-100 text-xs bg-sky-900 hover:bg-red-800 font-normal px-3 py-2 text-white"
  onClick={
    [MockFunction] {
      "calls": [
        [
          SyntheticBaseEvent {
            "_reactName": "onClick",
            "_targetInst": null,
            "altKey": false,
            "bubbles": true,
            "button": 0,
            "buttons": 0,
            "cancelable": true,
            "clientX": 0,
            "clientY": 0,
            "ctrlKey": false,
            "currentTarget": null,
            "defaultPrevented": false,
            "detail": 0,
            "eventPhase": 3,
            "getModifierState": [Function],
            "isDefaultPrevented": [Function],
            "isPropagationStopped": [Function],
            "isTrusted": false,
            "metaKey": false,
            "movementX": 0,
            "movementY": 0,
            "nativeEvent": MouseEvent {
              "isTrusted": false,
            },
            "pageX": undefined,
            "pageY": undefined,
            "relatedTarget": null,
            "screenX": 0,
            "screenY": 0,
            "shiftKey": false,
            "target": <button
              class="rounded-md mt-4 shadow-sm border border-gray-100 text-xs bg-red-800 hover:bg-sky-900 font-normal px-3 py-2 text-white"
            >
              Follow
            </button>,
            "timeStamp": 1728807790828,
            "type": "click",
            "view": null,
          },
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  Unfollow
</button>
`;
